LuLu2/LuLu2GrammarParser.py
# Generated from D:/Projects/2018/LuLu2Compiler/LuLu2Compiler\LuLu2Grammar.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LuLu2GrammarParser ( Parser ):

    grammarFileName = "LuLu2Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "'['", "']'", 
                     "'.'", "'='", "';'", "':'", "','", "'-'", "'+'", "'*'", 
                     "'^'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'&'", 
                     "'|'", "'~'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'declare'", "'return'", "'break'", "'continue'", 
                     "'destruct'", "'this'", "'super'", "'const'", "'private'", 
                     "'public'", "'protected'", "'int'", "'bool'", "'float'", 
                     "'string'", "'function'", "'case'", "'default'", "'while'", 
                     "'allocate'", "'type'", "'nil'", "'if'", "'else'", 
                     "'switch'", "'for'", "'false'", "'true'", "'of'" ]

    symbolicNames = [ "<INVALID>", "OPENING_BRACE", "CLOSING_BRACE", "OPENING_PARENTHEISIS", 
                      "CLOSING_PARENTHEISIS", "OPENING_BRACKET", "CLOSING_BRACKET", 
                      "SYMBOL_DOT", "SYMBOL_EQUAL", "SYMBOL_SEMICOLON", 
                      "SYMBOL_COLON", "SYMBOL_COMMA", "SYMBOL_DASH", "SYMBOL_PLUS", 
                      "SYMBOL_STAR", "SYMBOL_XOR", "SYMBOL_SLASH", "SYMBOL_PERCENT", 
                      "SYMBOL_EXCLAMATION", "SYMBOL_LOGIC_AND", "SYMBOL_LOGIC_OR", 
                      "SYMBOL_AND", "SYMBOL_OR", "SYMBOL_MAD", "INT_CONST", 
                      "EXPONENT", "REAL_CONST", "STRING_CONST", "ESCAPE_CHARACTER", 
                      "BOOL_CONST", "EQUAL_OPERATORS", "RELATIONAL_OPERATORS", 
                      "KEYWORD_DECLARE", "KEYWORD_RETURN", "KEYWORD_BREAK", 
                      "KEYWORD_CONTINUE", "KEYWORD_DESTRUCT", "KEYWORD_THIS", 
                      "KEYWORD_SUPER", "KEYWORD_CONST", "KEYWORD_PRIVATE", 
                      "KEYWORD_PUBLIC", "KEYWORD_PROTECTED", "KEYWORD_INT", 
                      "KEYWORD_BOOL", "KEYWORD_FLOAT", "KEYWORD_STRING", 
                      "KEYWORD_FUNCTION", "KEYWORD_CASE", "KEYWORD_DEFAULT", 
                      "KEYWORD_WHILE", "KEYWORD_ALLOCATE", "KEYWORD_TYPE", 
                      "KEYWORD_NIL", "KEYWORD_IF", "KEYWORD_ELSE", "KEYWORD_SWITCH", 
                      "KEYWORD_FOR", "KEYWORD_FALSE", "KEYWORD_TRUE", "KEYWORD_OF", 
                      "ID", "COMMENT", "WHITESPACE" ]

    RULE_program = 0
    RULE_ft_dcl = 1
    RULE_func_dcl = 2
    RULE_args = 3
    RULE_args_var = 4
    RULE_type_dcl = 5
    RULE_var_def = 6
    RULE_var_val = 7
    RULE_ft_def = 8
    RULE_type_def = 9
    RULE_component = 10
    RULE_access_modifier = 11
    RULE_fun_def = 12
    RULE_block = 13
    RULE_stmt = 14
    RULE_assign = 15
    RULE_var = 16
    RULE_ref = 17
    RULE_expr = 18
    RULE_func_call = 19
    RULE_list_ = 20
    RULE_handle_call = 21
    RULE_params = 22
    RULE_cond_stmt = 23
    RULE_loop_stmt = 24
    RULE_type_ = 25
    RULE_const_val = 26
    RULE_unary_op = 27
    RULE_binary_op1 = 28
    RULE_binary_op2 = 29
    RULE_binary_op3 = 30
    RULE_binary_op4 = 31
    RULE_binary_op5 = 32
    RULE_binary_op6 = 33
    RULE_binary_op7 = 34
    RULE_binary_op8 = 35
    RULE_binary_op9 = 36
    RULE_array_brackets = 37
    RULE_array_brackets_with_size = 38

    ruleNames =  [ "program", "ft_dcl", "func_dcl", "args", "args_var", 
                   "type_dcl", "var_def", "var_val", "ft_def", "type_def", 
                   "component", "access_modifier", "fun_def", "block", "stmt", 
                   "assign", "var", "ref", "expr", "func_call", "list_", 
                   "handle_call", "params", "cond_stmt", "loop_stmt", "type_", 
                   "const_val", "unary_op", "binary_op1", "binary_op2", 
                   "binary_op3", "binary_op4", "binary_op5", "binary_op6", 
                   "binary_op7", "binary_op8", "binary_op9", "array_brackets", 
                   "array_brackets_with_size" ]

    EOF = Token.EOF
    OPENING_BRACE=1
    CLOSING_BRACE=2
    OPENING_PARENTHEISIS=3
    CLOSING_PARENTHEISIS=4
    OPENING_BRACKET=5
    CLOSING_BRACKET=6
    SYMBOL_DOT=7
    SYMBOL_EQUAL=8
    SYMBOL_SEMICOLON=9
    SYMBOL_COLON=10
    SYMBOL_COMMA=11
    SYMBOL_DASH=12
    SYMBOL_PLUS=13
    SYMBOL_STAR=14
    SYMBOL_XOR=15
    SYMBOL_SLASH=16
    SYMBOL_PERCENT=17
    SYMBOL_EXCLAMATION=18
    SYMBOL_LOGIC_AND=19
    SYMBOL_LOGIC_OR=20
    SYMBOL_AND=21
    SYMBOL_OR=22
    SYMBOL_MAD=23
    INT_CONST=24
    EXPONENT=25
    REAL_CONST=26
    STRING_CONST=27
    ESCAPE_CHARACTER=28
    BOOL_CONST=29
    EQUAL_OPERATORS=30
    RELATIONAL_OPERATORS=31
    KEYWORD_DECLARE=32
    KEYWORD_RETURN=33
    KEYWORD_BREAK=34
    KEYWORD_CONTINUE=35
    KEYWORD_DESTRUCT=36
    KEYWORD_THIS=37
    KEYWORD_SUPER=38
    KEYWORD_CONST=39
    KEYWORD_PRIVATE=40
    KEYWORD_PUBLIC=41
    KEYWORD_PROTECTED=42
    KEYWORD_INT=43
    KEYWORD_BOOL=44
    KEYWORD_FLOAT=45
    KEYWORD_STRING=46
    KEYWORD_FUNCTION=47
    KEYWORD_CASE=48
    KEYWORD_DEFAULT=49
    KEYWORD_WHILE=50
    KEYWORD_ALLOCATE=51
    KEYWORD_TYPE=52
    KEYWORD_NIL=53
    KEYWORD_IF=54
    KEYWORD_ELSE=55
    KEYWORD_SWITCH=56
    KEYWORD_FOR=57
    KEYWORD_FALSE=58
    KEYWORD_TRUE=59
    KEYWORD_OF=60
    ID=61
    COMMENT=62
    WHITESPACE=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ft_dcl(self):
            return self.getTypedRuleContext(LuLu2GrammarParser.Ft_dclContext,0)


        def ft_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuLu2GrammarParser.Ft_defContext)
            else:
                return self.getTypedRuleContext(LuLu2GrammarParser.Ft_defContext,i)


        def getRuleIndex(self):
            return LuLu2GrammarParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LuLu2GrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LuLu2GrammarParser.KEYWORD_DECLARE:
                self.state = 78
                self.ft_dcl()


            self.state = 82 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81
                self.ft_def()
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LuLu2GrammarParser.OPENING_PARENTHEISIS) | (1 << LuLu2GrammarParser.KEYWORD_FUNCTION) | (1 << LuLu2GrammarParser.KEYWORD_TYPE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ft_dclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD_DECLARE(self):
            return self.getToken(LuLu2GrammarParser.KEYWORD_DECLARE, 0)

        def OPENING_BRACE(self):
            return self.getToken(LuLu2GrammarParser.OPENING_BRACE, 0)

        def CLOSING_BRACE(self):
            return self.getToken(LuLu2GrammarParser.CLOSING_BRACE, 0)

        def func_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuLu2GrammarParser.Func_dclContext)
            else:
                return self.getTypedRuleContext(LuLu2GrammarParser.Func_dclContext,i)


        def type_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuLu2GrammarParser.Type_dclContext)
            else:
                return self.getTypedRuleContext(LuLu2GrammarParser.Type_dclContext,i)


        def var_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuLu2GrammarParser.Var_defContext)
            else:
                return self.getTypedRuleContext(LuLu2GrammarParser.Var_defContext,i)


        def getRuleIndex(self):
            return LuLu2GrammarParser.RULE_ft_dcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFt_dcl" ):
                return visitor.visitFt_dcl(self)
            else:
                return visitor.visitChildren(self)




    def ft_dcl(self):

        localctx = LuLu2GrammarParser.Ft_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ft_dcl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(LuLu2GrammarParser.KEYWORD_DECLARE)
            self.state = 87
            self.match(LuLu2GrammarParser.OPENING_BRACE)
            self.state = 91 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 91
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 88
                    self.func_dcl()
                    pass

                elif la_ == 2:
                    self.state = 89
                    self.type_dcl()
                    pass

                elif la_ == 3:
                    self.state = 90
                    self.var_def()
                    pass


                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LuLu2GrammarParser.OPENING_PARENTHEISIS) | (1 << LuLu2GrammarParser.KEYWORD_CONST) | (1 << LuLu2GrammarParser.KEYWORD_INT) | (1 << LuLu2GrammarParser.KEYWORD_BOOL) | (1 << LuLu2GrammarParser.KEYWORD_FLOAT) | (1 << LuLu2GrammarParser.KEYWORD_STRING) | (1 << LuLu2GrammarParser.ID))) != 0)):
                    break

            self.state = 95
            self.match(LuLu2GrammarParser.CLOSING_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_dclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LuLu2GrammarParser.ID, 0)

        def OPENING_PARENTHEISIS(self, i:int=None):
            if i is None:
                return self.getTokens(LuLu2GrammarParser.OPENING_PARENTHEISIS)
            else:
                return self.getToken(LuLu2GrammarParser.OPENING_PARENTHEISIS, i)

        def CLOSING_PARENTHEISIS(self, i:int=None):
            if i is None:
                return self.getTokens(LuLu2GrammarParser.CLOSING_PARENTHEISIS)
            else:
                return self.getToken(LuLu2GrammarParser.CLOSING_PARENTHEISIS, i)

        def SYMBOL_SEMICOLON(self):
            return self.getToken(LuLu2GrammarParser.SYMBOL_SEMICOLON, 0)

        def args(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuLu2GrammarParser.ArgsContext)
            else:
                return self.getTypedRuleContext(LuLu2GrammarParser.ArgsContext,i)


        def SYMBOL_EQUAL(self):
            return self.getToken(LuLu2GrammarParser.SYMBOL_EQUAL, 0)

        def args_var(self):
            return self.getTypedRuleContext(LuLu2GrammarParser.Args_varContext,0)


        def getRuleIndex(self):
            return LuLu2GrammarParser.RULE_func_dcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_dcl" ):
                return visitor.visitFunc_dcl(self)
            else:
                return visitor.visitChildren(self)




    def func_dcl(self):

        localctx = LuLu2GrammarParser.Func_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_dcl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LuLu2GrammarParser.OPENING_PARENTHEISIS:
                self.state = 97
                self.match(LuLu2GrammarParser.OPENING_PARENTHEISIS)
                self.state = 98
                self.args(0)
                self.state = 99
                self.match(LuLu2GrammarParser.CLOSING_PARENTHEISIS)
                self.state = 100
                self.match(LuLu2GrammarParser.SYMBOL_EQUAL)


            self.state = 104
            self.match(LuLu2GrammarParser.ID)
            self.state = 105
            self.match(LuLu2GrammarParser.OPENING_PARENTHEISIS)
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 106
                self.args(0)

            elif la_ == 2:
                self.state = 107
                self.args_var(0)


            self.state = 110
            self.match(LuLu2GrammarParser.CLOSING_PARENTHEISIS)
            self.state = 111
            self.match(LuLu2GrammarParser.SYMBOL_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(LuLu2GrammarParser.Type_Context,0)


        def array_brackets(self):
            return self.getTypedRuleContext(LuLu2GrammarParser.Array_bracketsContext,0)


        def args(self):
            return self.getTypedRuleContext(LuLu2GrammarParser.ArgsContext,0)


        def SYMBOL_COMMA(self):
            return self.getToken(LuLu2GrammarParser.SYMBOL_COMMA, 0)

        def getRuleIndex(self):
            return LuLu2GrammarParser.RULE_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)



    def args(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LuLu2GrammarParser.ArgsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_args, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.type_()
            self.state = 115
            self.array_brackets()
            self._ctx.stop = self._input.LT(-1)
            self.state = 124
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = LuLu2GrammarParser.ArgsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_args)
                    self.state = 117
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 118
                    self.match(LuLu2GrammarParser.SYMBOL_COMMA)
                    self.state = 119
                    self.type_()
                    self.state = 120
                    self.array_brackets() 
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Args_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(LuLu2GrammarParser.Type_Context,0)


        def array_brackets(self):
            return self.getTypedRuleContext(LuLu2GrammarParser.Array_bracketsContext,0)


        def ID(self):
            return self.getToken(LuLu2GrammarParser.ID, 0)

        def args_var(self):
            return self.getTypedRuleContext(LuLu2GrammarParser.Args_varContext,0)


        def SYMBOL_COMMA(self):
            return self.getToken(LuLu2GrammarParser.SYMBOL_COMMA, 0)

        def getRuleIndex(self):
            return LuLu2GrammarParser.RULE_args_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs_var" ):
                return visitor.visitArgs_var(self)
            else:
                return visitor.visitChildren(self)



    def args_var(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LuLu2GrammarParser.Args_varContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_args_var, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.type_()
            self.state = 129
            self.array_brackets()
            self.state = 130
            self.match(LuLu2GrammarParser.ID)
            self._ctx.stop = self._input.LT(-1)
            self.state = 140
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = LuLu2GrammarParser.Args_varContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_args_var)
                    self.state = 132
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 133
                    self.match(LuLu2GrammarParser.SYMBOL_COMMA)
                    self.state = 134
                    self.type_()
                    self.state = 135
                    self.array_brackets()
                    self.state = 136
                    self.match(LuLu2GrammarParser.ID) 
                self.state = 142
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Type_dclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LuLu2GrammarParser.ID, 0)

        def SYMBOL_SEMICOLON(self):
            return self.getToken(LuLu2GrammarParser.SYMBOL_SEMICOLON, 0)

        def getRuleIndex(self):
            return LuLu2GrammarParser.RULE_type_dcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_dcl" ):
                return visitor.visitType_dcl(self)
            else:
                return visitor.visitChildren(self)




    def type_dcl(self):

        localctx = LuLu2GrammarParser.Type_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_dcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(LuLu2GrammarParser.ID)
            self.state = 144
            self.match(LuLu2GrammarParser.SYMBOL_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(LuLu2GrammarParser.Type_Context,0)


        def var_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuLu2GrammarParser.Var_valContext)
            else:
                return self.getTypedRuleContext(LuLu2GrammarParser.Var_valContext,i)


        def SYMBOL_SEMICOLON(self):
            return self.getToken(LuLu2GrammarParser.SYMBOL_SEMICOLON, 0)

        def KEYWORD_CONST(self):
            return self.getToken(LuLu2GrammarParser.KEYWORD_CONST, 0)

        def SYMBOL_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LuLu2GrammarParser.SYMBOL_COMMA)
            else:
                return self.getToken(LuLu2GrammarParser.SYMBOL_COMMA, i)

        def getRuleIndex(self):
            return LuLu2GrammarParser.RULE_var_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_def" ):
                return visitor.visitVar_def(self)
            else:
                return visitor.visitChildren(self)




    def var_def(self):

        localctx = LuLu2GrammarParser.Var_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LuLu2GrammarParser.KEYWORD_CONST:
                self.state = 146
                self.match(LuLu2GrammarParser.KEYWORD_CONST)


            self.state = 149
            self.type_()
            self.state = 150
            self.var_val()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LuLu2GrammarParser.SYMBOL_COMMA:
                self.state = 151
                self.match(LuLu2GrammarParser.SYMBOL_COMMA)
                self.state = 152
                self.var_val()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self.match(LuLu2GrammarParser.SYMBOL_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_valContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ref(self):
            return self.getTypedRuleContext(LuLu2GrammarParser.RefContext,0)


        def SYMBOL_EQUAL(self):
            return self.getToken(LuLu2GrammarParser.SYMBOL_EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(LuLu2GrammarParser.ExprContext,0)

        def getRuleIndex(self):
            return LuLu2GrammarParser.RULE_var_val

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_val" ):
                return visitor.visitVar_val(self)
            else:
                return visitor.visitChildren(self)




    def var_val(self):

        localctx = LuLu2GrammarParser.Var_valContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_val)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.ref()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LuLu2GrammarParser.SYMBOL_EQUAL:
                self.state = 161
                self.match(LuLu2GrammarParser.SYMBOL_EQUAL)
                self.state = 162
                self.expr(0)

